# systematic_trading

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: api-workflow.md  architecture.md  data-contracts.md  live-rollout.md  research-framework.md  research-state.md  signal-library.md  stock-valuation-framework.md
scripts/: analyze_dynamic_sleeve_risk_periods.py  audit_sharpe_stability.py  backfill_sec_fundamentals.py  backfill_tushare_us.py  backfill_yahoo_adjusted.py  compare_trend_signal.py  export_sota_artifacts.py  fetch_ib_paper_account_snapshot.py  optimize_multi_asset_combined_stack.py  optimize_multi_asset_pool_filter.py  plot_backtest.py  run_all_weather_research.py  run_dynamic_sleeve_capped_research.py  run_first_backtest.py  run_multi_asset_research.py  run_sota_live_rebalance.py  run_stock_replacement_backtest.py  serve_operator_dashboard.py  start_operator_dashboard.ps1  stop_operator_dashboard.ps1  submit_ib_paper_orders.py  test_ib_paper_connection.py
tests/: test_accounting.py  test_alerts.py  test_api.py  test_backtest_comparison.py  test_backtest_engine.py  test_backtest_reporting.py  test_backtest_stability.py  test_beta.py  test_ib_account_snapshot.py  test_ib_execution.py  test_ib_market_data.py  test_live_market_data.py  test_live_sota.py  test_market_data_analytics.py  test_operator_scripts.py  test_operator_ui.py  test_point_in_time_fundamentals.py  test_sec_edgar_fundamentals.py  test_sharpe_stability_audit.py  test_signals.py  test_stock_replacement_backtest.py  test_stock_valuation_framework.py  test_strategy_catalog.py  (+2 more)
(+167 files in other folders)
